--- a/app/src/main/res/layout/item_nienkhoa.xml
+++ b/app/src/main/res/layout/item_nienkhoa.xml
@@ -2,19 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#5D71C9"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#BFBDBD"
     android:padding="8dp">
 
     <TextView
         android:id="@+id/ten_nienkhoa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:padding="4dp"
-        android:text="Thống kê"
-        android:textColor="@color/white"
+        android:text="2019"
+        android:textColor="#555353"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
