--- a/app/src/main/res/layout/item_khoa.xml
+++ b/app/src/main/res/layout/item_khoa.xml
@@ -4,46 +4,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/text_view_border"
-        android:orientation="vertical">
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/text_view_border"
+            android:orientation="vertical">
 
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                app:srcCompat="@drawable/diemdanh" />
-
-            <TextView
-                android:id="@+id/tenkhoa"
-                android:layout_width="288dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Tài chính - kế toán"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <Spinner
-                android:id="@+id/spinner3"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp" />
+                android:layout_height="48dp"
+
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    app:srcCompat="@drawable/diemdanh" />
+
+                <TextView
+                    android:id="@+id/tenkhoa"
+                    android:layout_width="288dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Tài chính - kế toán"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <Spinner
+                    android:id="@+id/spinner3"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp" />
+
+            </LinearLayout>
+
+            <ListView
+                android:id="@+id/list_nganh"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
-
-        <ListView
-            android:id="@+id/list_nganh"
-            android:layout_width="match_parent"
-            android:layout_height="351dp" />
-
-    </LinearLayout>
-
+    </ScrollView>
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
