--- a/app/src/main/res/layout/layout_thongtisinhvien.xml
+++ b/app/src/main/res/layout/layout_thongtisinhvien.xml
@@ -65,7 +65,7 @@
                     android:textSize="20sp" />
 
                 <TextView
-                    android:id="@+id/txt_masv"
+                    android:id="@+id/txt_tbmon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
