--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -141,7 +141,7 @@
 
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/quenmk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
