--- a/app/src/main/res/layout/chucnangthem.xml
+++ b/app/src/main/res/layout/chucnangthem.xml
@@ -46,5 +46,12 @@
             android:gravity="center_vertical"
             android:text="Cài đặt mã pin" />
 
+        <Button
+            android:id="@+id/dangxuat"
+            android:layout_width="match_parent"
+            android:layout_height="68dp"
+            android:gravity="center_vertical"
+            android:text="Đăng xuất" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
