--- a/app/src/main/res/layout/diemdanh.xml
+++ b/app/src/main/res/layout/diemdanh.xml
@@ -177,6 +177,12 @@
             android:layout_height="40dp"
             android:text="Lưu" />
 
+        <Button
+            android:id="@+id/htdiemdanh"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="Hiển thị danh sách" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
