--- a/app/src/main/res/layout/layout_hienthi_diem.xml
+++ b/app/src/main/res/layout/layout_hienthi_diem.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <Spinner
+        android:id="@+id/spinner_hocky_hienthidiem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <ListView
         android:id="@+id/list_danhsachmondiem"
         android:layout_width="match_parent"
