--- a/app/src/main/res/layout/diemdanh.xml
+++ b/app/src/main/res/layout/diemdanh.xml
@@ -55,91 +55,107 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:orientation="horizontal">
 
-                    <LinearLayout
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="109dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Chọn môn"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
+
+                    <Spinner
+                        android:id="@+id/spinner_diemdanh_hocky"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:orientation="horizontal">
+                        android:layout_height="20dp"
+                        android:layout_marginTop="10dp"
+                        android:gravity="bottom|center" />
+                    <!--                        android:prompt="Chọn lớp" />-->
 
-                        <TextView
-                            android:id="@+id/textView3"
-                            android:layout_width="68dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="40dp"
-                            android:text="Ngày"
-                            android:textColor="#000000"
-                            android:textSize="20sp" />
+                </LinearLayout>
 
-                        <EditText
-                            android:id="@+id/dateEditText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:hint="Chọn ngày điểm danh"
-                            android:focusable="false"
-                            android:clickable="true" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:orientation="horizontal">
 
-
-
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="366dp"
-                        android:layout_height="40dp"
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="68dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginLeft="40dp"
-                        android:orientation="horizontal">
+                        android:text="Ngày"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
 
-                        <TextView
-                            android:id="@+id/textView4"
-                            android:layout_width="108dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:text="Chọn lớp"
-                            android:textColor="#000000"
-                            android:textSize="20sp" />
-
-                        <Spinner
-                            android:id="@+id/spinner_lop"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
-
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="363dp"
-                        android:layout_height="40dp"
-                        android:layout_marginLeft="40dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/textView5"
-                            android:layout_width="109dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:text="Chọn môn"
-                            android:textColor="#000000"
-                            android:textSize="20sp" />
-
-                        <Spinner
-                            android:id="@+id/spiner_mon"
-                            android:layout_width="match_parent"
-                            android:layout_height="20dp"
-                            android:layout_marginTop="10dp"
-                            android:gravity="bottom|center" />
-                        <!--                        android:prompt="Chọn lớp" />-->
-
-                    </LinearLayout>
+                    <EditText
+                        android:id="@+id/dateEditText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:focusable="false"
+                        android:hint="Chọn ngày điểm danh" />
 
 
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="366dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="108dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Chọn lớp"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
+
+                    <Spinner
+                        android:id="@+id/spinner_lop"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="363dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="109dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Chọn môn"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
+
+                    <Spinner
+                        android:id="@+id/spiner_mon"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:layout_marginTop="10dp"
+                        android:gravity="bottom|center" />
+                    <!--                        android:prompt="Chọn lớp" />-->
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
