--- a/app/src/main/res/layout/layout_thongtisinhvien.xml
+++ b/app/src/main/res/layout/layout_thongtisinhvien.xml
@@ -20,6 +20,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView3">
 
+            <TextView
+                android:id="@+id/txt_edit_thongtinsinhvien"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Chỉnh sửa" />
+
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="130dp"
