hoan thanh thêm chỉnh sửa avatar sinh viên

--- a/app/src/main/res/layout/list_item_sinhvien.xml
+++ b/app/src/main/res/layout/list_item_sinhvien.xml
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/imageavt"
             android:layout_width="66dp"
             android:layout_height="52dp"
             android:layout_margin="10dp"
