--- a/app/src/main/res/layout/activity_edit_thongtinsinhvien.xml
+++ b/app/src/main/res/layout/activity_edit_thongtinsinhvien.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imageViewAvatar"
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:layout_gravity="center_horizontal"
