--- a/app/src/main/res/layout/caidat1.xml
+++ b/app/src/main/res/layout/caidat1.xml
@@ -145,7 +145,7 @@
         tools:layout_editor_absoluteY="50dp">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imgAvatar"
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:layout_margin="10dp"
