--- a/app/src/main/res/layout/layout_thongtisinhvien.xml
+++ b/app/src/main/res/layout/layout_thongtisinhvien.xml
@@ -18,7 +18,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3">
+            app:layout_constraintTop_toBottomOf="@+id/imgAvatar">
 
             <TextView
                 android:id="@+id/txt_edit_thongtinsinhvien"
@@ -27,7 +27,7 @@
                 android:text="Chỉnh sửa" />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/imgAvatar"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
                 android:layout_gravity="center_horizontal"
