--- a/app/src/main/res/layout/activity_edit_thongtinsinhvien.xml
+++ b/app/src/main/res/layout/activity_edit_thongtinsinhvien.xml
@@ -195,6 +195,14 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
             android:text="Lưu" />
+        <Button
+            android:id="@+id/btnXoa"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+
+            android:text="Xóa"
+            android:layout_marginTop="16dp"/>
 
     </LinearLayout>
 </ScrollView>
