[hoang thanh] In diem

--- a/app/src/main/res/layout/layout_hienthi_diem.xml
+++ b/app/src/main/res/layout/layout_hienthi_diem.xml
@@ -6,6 +6,42 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Điêm trung bình học kỳ:" />
+
+        <TextView
+            android:id="@+id/diemtbcahocky"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Xếp loại:" />
+
+        <TextView
+            android:id="@+id/xephanghocsinh"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
     <Spinner
         android:id="@+id/spinner_hocky_hienthidiem"
         android:layout_width="match_parent"
