[dang lam] Bieudo học sinh vắng

--- a/app/src/main/res/layout/activity_bieudo_sinhvienvang.xml
+++ b/app/src/main/res/layout/activity_bieudo_sinhvienvang.xml
@@ -1,6 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textViewLop2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chọn Lớp:" />
+
+        <Spinner
+            android:id="@+id/spinnerLop2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textViewLop"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:id="@+id/textViewHocKy2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/spinnerLop"
+            android:text="Chọn Học Kỳ:" />
+
+        <Spinner
+            android:id="@+id/spinnerHocKy2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textViewHocKy"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:id="@+id/textViewNgay2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/spinnerHocKy"
+            android:text="Chọn Ngày:" />
+
+        <Spinner
+            android:id="@+id/spinnerNgay2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textViewNgay"
+            android:layout_centerHorizontal="true" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
