--- a/app/src/main/res/layout/danhsachlop.xml
+++ b/app/src/main/res/layout/danhsachlop.xml
@@ -23,7 +23,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textView_tennganh"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
