[Bổ sung] Tính năng bổ sung biểu đồ thêm

--- a/app/src/main/res/layout/activity_bieudo_sinhvienvang.xml
+++ b/app/src/main/res/layout/activity_bieudo_sinhvienvang.xml
@@ -50,6 +50,12 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewNgay"
             android:layout_centerHorizontal="true" />
+
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/pieChart_SVVang"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
