--- a/app/src/main/res/layout/activity_themlophoc.xml
+++ b/app/src/main/res/layout/activity_themlophoc.xml
@@ -37,7 +37,7 @@
         android:text="Chọn Khoa:" />
 
     <Spinner
-        android:id="@+id/spinnerKhoa"
+        android:id="@+id/spinnerDepartments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"/>
