--- a/app/src/main/res/layout/layout_thongtinsinhvien.xml
+++ b/app/src/main/res/layout/layout_thongtinsinhvien.xml
@@ -218,12 +218,37 @@
                     android:textSize="20sp" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView27"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Học bổng"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/txt_hocbong"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="TextView"
+                    android:textAlignment="textEnd"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"/>
+            android:orientation="horizontal">
+
+        </LinearLayout>
 
     </LinearLayout>
 </ScrollView>
