[Hoàn thành] Tính năng Xoá thông tin sinh viên

--- a/app/src/main/res/layout/layout_chinhsuathongtinsinhvien.xml
+++ b/app/src/main/res/layout/layout_chinhsuathongtinsinhvien.xml
@@ -154,6 +154,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Cập Nhật Thông Tin" />
+        <Button
+            android:id="@+id/btn_xoa"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Xóa Sinh Viên" />
 
     </LinearLayout>
 </ScrollView>
