--- a/app/src/main/res/layout/activity_bang_diem.xml
+++ b/app/src/main/res/layout/activity_bang_diem.xml
@@ -1,7 +1,79 @@
 <!-- activity_bang_diem.xml -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/textView34"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="BẢNG ĐIỂM SINH VIÊN"
+        android:textAlignment="center"
+        android:textSize="24dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView29"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Môn học" />
+
+    <Spinner
+        android:id="@+id/spinner_mon_hoc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/recycler_view_bang_diem"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp" />
+
+    <TextView
+        android:id="@+id/textView32"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Lần thi" />
+
+    <Spinner
+        android:id="@+id/spinner_lan_thi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/spinner_mon_hoc"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp" />
+
+    <TextView
+        android:id="@+id/textView30"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Học kỳ" />
+
+    <Spinner
+        android:id="@+id/spinner_hoc_ky"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/spinner_lan_thi"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp" />
+
+    <Button
+        android:id="@+id/button_apply_filter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Lọc" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_bang_diem"
@@ -13,65 +85,12 @@
         android:scrollbars="vertical" />
 
     <!-- Spinner for Mon Hoc -->
-    <Spinner
-        android:id="@+id/spinner_mon_hoc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/recycler_view_bang_diem"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        />
 
     <!-- Spinner for Lan Thi -->
-    <Spinner
-        android:id="@+id/spinner_lan_thi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/spinner_mon_hoc"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        />
 
     <!-- Spinner for Hoc Ky -->
-    <Spinner
-        android:id="@+id/spinner_hoc_ky"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/spinner_lan_thi"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        />
 
     <!-- EditText for Diem -->
-    <EditText
-        android:id="@+id/edit_text_diem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/spinner_hoc_ky"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        />
 
     <!-- Button to Apply Filter -->
-    <Button
-        android:id="@+id/button_apply_filter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/edit_text_diem"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        />
-</RelativeLayout>
+</LinearLayout>
