[ ĐANG LÀM] Tính năng "Chỉnh sửa Điểm"

--- a/app/src/main/res/layout/activity_bang_diem.xml
+++ b/app/src/main/res/layout/activity_bang_diem.xml
@@ -23,7 +23,6 @@
         android:id="@+id/spinner_mon_hoc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/recycler_view_bang_diem"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="16dp"
@@ -75,14 +74,11 @@
         android:layout_marginEnd="16dp"
         android:text="Lọc" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_bang_diem"
+    <ListView
+        android:id="@+id/list_view_bang_diem"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:padding="8dp"
-        android:scrollbarStyle="outsideOverlay"
-        android:scrollbars="vertical" />
+        android:layout_height="match_parent" />
+
 
     <!-- Spinner for Mon Hoc -->
 
