--- a/app/src/main/res/layout/activity_subject_list.xml
+++ b/app/src/main/res/layout/activity_subject_list.xml
@@ -9,7 +9,7 @@
         android:id="@+id/textViewTitle2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="DANH SÁCH KHOA"
+        android:text="DANH SÁCH MÔN HỌC"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:paddingRight="30dp"
-            android:text="Mã  Khoa" />
+            android:text="Mã  Môn" />
 
         <TextView
             android:id="@+id/textView20"
@@ -34,7 +34,7 @@
             android:layout_weight="1"
             android:paddingLeft="30dp"
 
-            android:text="Tên Khoa" />
+            android:text="Tên Môn" />
     </LinearLayout>
 
     <ListView
